plugins/javaFX/testData/highlighting/readOnly.fxml
<?import javafx.scene.layout.AnchorPane?>
<?import java.lang.String?>
<AnchorPane id="AnchorPane" xmlns:fx="http://javafx.com/fxml" stylesheets="mystyle.css" <error descr="Property 'backgroundFills' is read-only">backgroundFills=""</error>>
  <stylesheets>
    <String fx:value="mystyle.css"/>
  </stylesheets>

</AnchorPane>
